--- a/american antelope/american antelope/american antelope.csproj
+++ b/american antelope/american antelope/american antelope.csproj
@@ -46,8 +46,12 @@
     <Compile Include="Communication\BufferOverflowEventArgs.cs" />
     <Compile Include="Communication\ICommunication.cs" />
     <Compile Include="Communication\SerialPort.cs" />
+    <Compile Include="IUnit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StageController\IStageController.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="MeasuringUnits\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
