--- a/american antelope/tester/tester.csproj
+++ b/american antelope/tester/tester.csproj
@@ -62,6 +62,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="CS.Common.MeasuringUnits\Ev.cs" />
+    <Compile Include="CS.Common.MeasuringUnits\IMeasuringUnit.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
