測定機、センサ部のクラスなど見直しおよびそれらの一覧のファイルからのロードを実装。

--- a/american antelope/american bullfrog/american bullfrog.csproj
+++ b/american antelope/american bullfrog/american bullfrog.csproj
@@ -63,7 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CS.CommonRc.Inspections\Inspection.cs" />
-    <Compile Include="CS.CommonRc.MeasuringUnits\IMeasuringUnit.cs" />
+    <Compile Include="CS.CommonRc.MeasuringUnits\MeasuringUnit.cs" />
     <Compile Include="CS.CommonRc.MeasuringUnits\LacS.cs" />
     <Compile Include="CS.CommonRc.MeasuringUnits\Mitutoyo\LinearGuages\Counter.cs" />
     <Compile Include="CS.CommonRc.MeasuringUnits\Sensor.cs" />
