--- a/american antelope/american bullfrog/App.config
+++ b/american antelope/american bullfrog/App.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="CS.Applications.AmericanBullfrog.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <applicationSettings>
+        <CS.Applications.AmericanBullfrog.Properties.Settings>
+            <setting name="SensorListFilePath" serializeAs="String">
+                <value>\\ageo.chuo.co.jp\ShareRoot\inspection_data\Config\SensorList.csv</value>
+            </setting>
+            <setting name="MeasuringUnitListFilePath" serializeAs="String">
+                <value>\\ageo.chuo.co.jp\ShareRoot\inspection_data\Config\MeasuringUnitList.csv</value>
+            </setting>
+        </CS.Applications.AmericanBullfrog.Properties.Settings>
+    </applicationSettings>
 </configuration>
