--- a/american antelope/american bullfrog/Properties/Settings.settings
+++ b/american antelope/american bullfrog/Properties/Settings.settings
@@ -1,7 +1,12 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CS.Applications.AmericanBullfrog.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="SensorListFilePath" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">\\ageo.chuo.co.jp\ShareRoot\inspection_data\Config\SensorList.csv</Value>
+    </Setting>
+    <Setting Name="MeasuringUnitListFilePath" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">\\ageo.chuo.co.jp\ShareRoot\inspection_data\Config\MeasuringUnitList.csv</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
