LAC-S、EV、EH部分完了。動作は未確認。 測定結果部、設定読み込み部、実計測部、データ保存部以外は大まか完了

--- a/american antelope/american bullfrog/App.config
+++ b/american antelope/american bullfrog/App.config
@@ -16,6 +16,9 @@
             <setting name="MeasuringUnitListFilePath" serializeAs="String">
                 <value>\\ageo.chuo.co.jp\ShareRoot\inspection_data\Config\MeasuringUnitList.csv</value>
             </setting>
+            <setting name="InspecorListFilePath" serializeAs="String">
+                <value>\\ageo.chuo.co.jp\ShareRoot\inspection_data\Config\InspectorList.csv</value>
+            </setting>
         </CS.Applications.AmericanBullfrog.Properties.Settings>
     </applicationSettings>
 </configuration>
