--- a/american antelope/american bullfrog/Properties/Settings.settings
+++ b/american antelope/american bullfrog/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="MeasuringUnitListFilePath" Type="System.String" Scope="Application">
       <Value Profile="(Default)">\\ageo.chuo.co.jp\ShareRoot\inspection_data\Config\MeasuringUnitList.csv</Value>
     </Setting>
+    <Setting Name="InspecorListFilePath" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">\\ageo.chuo.co.jp\ShareRoot\inspection_data\Config\InspectorList.csv</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
