--- a/american antelope/american bullfrog/american bullfrog.csproj
+++ b/american antelope/american bullfrog/american bullfrog.csproj
@@ -63,9 +63,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CS.CommonRc.Inspections\Inspection.cs" />
+    <Compile Include="CS.CommonRc.MeasuringUnits\FormLacsSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CS.CommonRc.MeasuringUnits\FormLacsSettings.Designer.cs">
+      <DependentUpon>FormLacsSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="CS.CommonRc.MeasuringUnits\MeasuringUnit.cs" />
     <Compile Include="CS.CommonRc.MeasuringUnits\LacS.cs" />
     <Compile Include="CS.CommonRc.MeasuringUnits\Mitutoyo\LinearGuages\Counter.cs" />
+    <Compile Include="CS.CommonRc.MeasuringUnits\Mitutoyo\LinearGuages\FormCounterSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CS.CommonRc.MeasuringUnits\Mitutoyo\LinearGuages\FormCounterSettings.Designer.cs">
+      <DependentUpon>FormCounterSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="CS.CommonRc.MeasuringUnits\Sensor.cs" />
     <Compile Include="CS.CommonRc.Stages\Stage.cs" />
     <Compile Include="CS.CommonRc\Operator.cs" />
@@ -79,6 +91,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+    <EmbeddedResource Include="CS.CommonRc.MeasuringUnits\FormLacsSettings.resx">
+      <DependentUpon>FormLacsSettings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CS.CommonRc.MeasuringUnits\Mitutoyo\LinearGuages\FormCounterSettings.resx">
+      <DependentUpon>FormCounterSettings.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
