--- a/american antelope/american badger/american badger.csproj
+++ b/american antelope/american badger/american badger.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{3774C470-DE2A-4077-9052-C7764DBA1C98}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CS.Common.StageControllers</RootNamespace>
+    <RootNamespace>CS.CommonRc.StageControllers</RootNamespace>
     <AssemblyName>american badger</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CS.CommonRc.StageControllers\IStageController.cs" />
     <Compile Include="CsController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
