--- a/american antelope/american badger/american badger.csproj
+++ b/american antelope/american badger/american badger.csproj
@@ -39,14 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CS.CommonRc.StageControllers\IStageController.cs" />
-    <Compile Include="CsController.cs" />
+    <Compile Include="CS.CommonRc.StageControllers\StageController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="CS.CommonRc.StageControllers\CsController.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\american antelope\american antelope.csproj">
