--- a/american antelope/american bullfrog/american bullfrog.csproj
+++ b/american antelope/american bullfrog/american bullfrog.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AmericanBullfrogSettings.cs" />
     <Compile Include="CS.CommonRc.Inspections\Inspection.cs" />
     <Compile Include="CS.CommonRc.MeasuringUnits\FormLacsSettings.cs">
       <SubType>Form</SubType>
