設定値保存、復元部はステージ、測定機、コントローラ部まで完了。

--- a/american antelope/american bullfrog/american bullfrog.csproj
+++ b/american antelope/american bullfrog/american bullfrog.csproj
@@ -72,6 +72,7 @@
     </Compile>
     <Compile Include="CS.CommonRc.MeasuringUnits\MeasuringUnit.cs" />
     <Compile Include="CS.CommonRc.MeasuringUnits\LacS.cs" />
+    <Compile Include="MeasuringUnitCombination.cs" />
     <Compile Include="CS.CommonRc.MeasuringUnits\Mitutoyo\LinearGuages\Counter.cs" />
     <Compile Include="CS.CommonRc.MeasuringUnits\Mitutoyo\LinearGuages\FormCounterSettings.cs">
       <SubType>Form</SubType>
